syntax = "proto3";

package greet;

option go_package = "github.com/mohamedbanhawi/grpc-go-course/greet/proto";

message GreetRequest {
    string first_name = 1;
}

message GreetResponse {
    string result = 1;
}

service GreetService {
    rpc Greet (GreetRequest) returns (GreetResponse);
    rpc GreetStream (GreetRequest) returns (stream GreetResponse);
    rpc GreetLongStream(stream GreetRequest) returns (GreetResponse);

}



